Closed
Bug 386807
Opened 17 years ago
Closed 17 years ago
"ASSERTION: lost track of line breaks somehow" with text-transform
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: jruderman, Assigned: roc)
References
Details
(Keywords: assertion, testcase)
Attachments
(2 files)
278 bytes,
text/html
|
Details | |
5.75 KB,
patch
|
smontagu
:
review+
damons
:
approval1.9+
|
Details | Diff | Splinter Review |
###!!! ASSERTION: lost track of line breaks somehow: 'nextLineBreak == aTextRun->mLineBreaks.Length()', file /Users/jruderman/trunk/mozilla/layout/generic/nsTextRunTransformations.cpp, line 481
Reporter | ||
Comment 1•17 years ago
|
||
Assignee | ||
Comment 2•17 years ago
|
||
The problem here is that the linebreaks array passed as a textrun construction parameter should not have duplicate elements --- it makes no sense to have two linebreaks at the same post-whitespace-compression content offset. But this can happen when we construct textruns for frames that haven't been reflowed yet. So textframe should eliminate duplicates when it's building this array to pass to textrun construction.
Updated•17 years ago
|
Attachment #278543 -
Flags: review?(smontagu) → review+
Assignee | ||
Updated•17 years ago
|
Attachment #278543 -
Flags: approval1.9?
Comment 3•17 years ago
|
||
Comment on attachment 278543 [details] [diff] [review] fix Please land ASAP, even during the M8 freeze. Thank you.
Attachment #278543 -
Flags: approval1.9? → approval1.9+
Assignee | ||
Comment 4•17 years ago
|
||
checked in
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•