Bug 386807. Remove duplicate elements from the linebreak array textrun construction parameter. r=smontagu,a-M8=damon